# Internship_M1

./: .~lock.Notes_report.odt#  CLI python.py  CMakeCache.txt  CMakeLists.txt  Explication fichiers  Notes_report.odt  Project_NA_MIC_2021.md  README.md  Rapport_zspace.odt  RenderWindowNoUiFile.cxx  WidgetNewLayout.cxx  renderWindowCrystal.cxx  vtkRenderWindow.cxx  vtkRenderWindow.h
ArduinoController_plot_3_datas/: ArduinoConnect.py
CMake/: CMakeCache_CTK-build.txt
Errors/: README.md
QuadBuffer/: WidgetNewLayout.cxx
Report/: Arduino_Connect.odt  Future_request.odt  Project_NA_MIC_2021.md  Rapport_zspace.odt  Tutoriels.odt
Report/Screenshots/: README.md  roll fonctionne mais pas bon axe.webm
Screenshots/: cinnamon-20210811-1.webm
Tangible interface/accelerometer_arduino_slicer/: ArduinoConnect.py
Tangible_interface_arduino/: CMakeLists.txt
Tangible_interface_arduino/tangible_interface_arduinoConnect/: CMakeLists.txt  tangible_interface_arduinoConnect.py
myFirstExtension/: CMakeLists.txt
myFirstExtension/myFirstModule/: CMakeLists.txt  myFirstModule.py
quadBufferDisplay/: QuadBufferPython.py  form.ui  qSlicerquadBufferDisplayModule.cxx  qSlicerquadBufferDisplayModuleWidget.cxx  vtkSlicerquadBufferDisplayLogic.cxx
test_accelerometre_inclinaison/: test_accelerometre_inclinaison.ino
test_arduinoconnect/: test_accelerometer.ino  test_arduinoconnect.ino
test_arduinoconnect/test_accelerometer/: test_accelerometer.ino
vtkQuadBufferRenderWindow/: CMakeLists.txt  CylinderExample.cxx
vtkQuadBufferWidget/: CMakeLists.txt  RenderWindowNoUiFile.cxx
(+5 files in other folders)
